--- a/DataCorner/TD/src/app/component/manage-permission/manage-permission.component.html
+++ b/DataCorner/TD/src/app/component/manage-permission/manage-permission.component.html
@@ -9,215 +9,23 @@
 </div>
 <mat-card>
     <mat-card-content>
-        <div class="mat-elevation-z4">
-            <div class="table-responsive" style="max-height: 450px; overflow: auto;">
-                <table mat-table [dataSource]="dataSource" matSort class="table table-striped table-hover">
-
-                    <!-- Serial Number -->
-                    <ng-container matColumnDef="RoleName">
-                      <th mat-header-cell *matHeaderCellDef>Role_Name</th>
-                      <td mat-cell *matCellDef="let user">{{ user.RoleName }}</td>
-                    </ng-container>
-          
-                    <!-- Id -->
-                    <ng-container matColumnDef="id">
-                      <th mat-header-cell *matHeaderCellDef mat-sort-header>EmployeeId</th>
-                      <td mat-cell *matCellDef="let user">{{ user.empId }}</td>
-                    </ng-container>
-          
-                    <!-- Name -->
-                    <ng-container matColumnDef="name">
-                      <th mat-header-cell *matHeaderCellDef mat-sort-header>Name</th>
-                      <td mat-cell *matCellDef="let user">{{ user.name }}</td>
-                    </ng-container>
-          
-                    <!-- Email -->
-                    <ng-container matColumnDef="Email">
-                      <th mat-header-cell *matHeaderCellDef mat-sort-header>Email</th>
-                      <td mat-cell *matCellDef="let user">{{ user.mailId }}</td>
-                    </ng-container>
-          
-                    <!-- Phone -->
-                    <ng-container matColumnDef="Phone">
-                      <th mat-header-cell *matHeaderCellDef mat-sort-header>Phone</th>
-                      <td mat-cell *matCellDef="let user">{{ user.contact }}</td>
-                    </ng-container>
-          
-                    <!-- SkillSet -->
-                    <ng-container matColumnDef="SkillSet">
-                      <th mat-header-cell *matHeaderCellDef mat-sort-header>SkillSet</th>
-                      <td mat-cell *matCellDef="let user">{{ user.skill_Set}}</td>
-                    </ng-container>
-          
-                    <!-- Month in SS -->
-                    <ng-container matColumnDef="Months_in_SS">
-                      <th mat-header-cell *matHeaderCellDef mat-sort-header>Months_in_SS</th>
-                      <td mat-cell *matCellDef="let user">{{ user.months_in_SS}}</td>
-                    </ng-container>
-          
-                    <!-- Date of Joining -->
-                    <ng-container matColumnDef="doj">
-                      <th mat-header-cell *matHeaderCellDef mat-sort-header>Doj</th>
-                      <td mat-cell *matCellDef="let user">{{ user.doj}}</td>
-                    </ng-container>
-          
-          
-                    <!-- ProjectId -->
-                    <ng-container matColumnDef="project_Id">
-                      <th mat-header-cell *matHeaderCellDef mat-sort-header>Project_Id</th>
-                      <td mat-cell *matCellDef="let user">{{ user.project_Id}}</td>
-                    </ng-container>
-          
-                    <!-- Project Name -->
-                    <ng-container matColumnDef="project_Name">
-                      <th mat-header-cell *matHeaderCellDef mat-sort-header>Project_Name</th>
-                      <td mat-cell *matCellDef="let user">{{ user.project_Name}}</td>
-                    </ng-container>
-          
-                    <!-- Category -->
-                    <ng-container matColumnDef="category">
-                      <th mat-header-cell *matHeaderCellDef mat-sort-header>Category</th>
-                      <td mat-cell *matCellDef="let user">{{ user.category}}</td>
-                    </ng-container>
-          
-                    <!-- PCD -->
-                    <ng-container matColumnDef="pcd">
-                      <th mat-header-cell *matHeaderCellDef mat-sort-header>PCD</th>
-                      <td mat-cell *matCellDef="let user">{{ user.pcd}}</td>
-                    </ng-container>
-          
-          
-                    <!-- Prospects -->
-                    <ng-container matColumnDef="prospects">
-                      <th mat-header-cell *matHeaderCellDef mat-sort-header>Prospects</th>
-                      <td mat-cell *matCellDef="let user">{{ user.prospects}}</td>
-                    </ng-container>
-          
-                    <!-- ReportingTo -->
-                    <ng-container matColumnDef="reportingTo">
-                      <th mat-header-cell *matHeaderCellDef mat-sort-header>ReportingTo</th>
-                      <td mat-cell *matCellDef="let user">{{ user.reportingTo}}</td>
-                    </ng-container>
-          
-                    <!-- division_id -->
-                    <ng-container matColumnDef="division_id">
-                      <th mat-header-cell *matHeaderCellDef mat-sort-header>Division_Id</th>
-                      <td mat-cell *matCellDef="let user">{{ user.division_id}}</td>
-                    </ng-container>
-          
-                    <!-- Division -->
-                    <ng-container matColumnDef="division">
-                      <th mat-header-cell *matHeaderCellDef mat-sort-header>Division</th>
-                      <td mat-cell *matCellDef="let user">{{ user.division}}</td>
-                    </ng-container>
-          
-                    <!-- sub_Div -->
-                    <ng-container matColumnDef="sub_Div">
-                      <th mat-header-cell *matHeaderCellDef mat-sort-header>Sub_Div</th>
-                      <td mat-cell *matCellDef="let user">{{ user.sub_Div}}</td>
-                    </ng-container>
-          
-                    <!-- YOP -->
-                    <ng-container matColumnDef="yop">
-                      <th mat-header-cell *matHeaderCellDef mat-sort-header>YOP</th>
-                      <td mat-cell *matCellDef="let user">{{ user.yop}}</td>
-                    </ng-container>
-          
-                    <!-- Education -->
-                    <ng-container matColumnDef="education">
-                      <th mat-header-cell *matHeaderCellDef mat-sort-header>Education</th>
-                      <td mat-cell *matCellDef="let user">{{ user.education}}</td>
-                    </ng-container>
-          
-                    <!-- prev_Exp -->
-                    <ng-container matColumnDef="prev_Exp">
-                      <th mat-header-cell *matHeaderCellDef mat-sort-header>Prev_Exp</th>
-                      <td mat-cell *matCellDef="let user">{{ user.prev_Exp}}</td>
-                    </ng-container>
-          
-                    <!-- LeadName -->
-                    <ng-container matColumnDef="leadName">
-                      <th mat-header-cell *matHeaderCellDef mat-sort-header>LeadName</th>
-                      <td mat-cell *matCellDef="let user">{{ user.leadName}}</td>
-                    </ng-container>
-          
-          
-                    <!-- Location -->
-                    <ng-container matColumnDef="location">
-                      <th mat-header-cell *matHeaderCellDef mat-sort-header>Location</th>
-                      <td mat-cell *matCellDef="let user">{{ user.location}}</td>
-                    </ng-container>
-          
-                    <!-- contact -->
-                    <ng-container matColumnDef="contact">
-                      <th mat-header-cell *matHeaderCellDef mat-sort-header>Contact</th>
-                      <td mat-cell *matCellDef="let user">{{ user.contact}}</td>
-                    </ng-container>
-          
-                    <!-- Project_Experience -->
-                    <ng-container matColumnDef="project_Experience">
-                      <th mat-header-cell *matHeaderCellDef mat-sort-header>Project_Experience</th>
-                      <td mat-cell *matCellDef="let user">{{ user.project_Experience}}</td>
-                    </ng-container>
-          
-                    <!-- TOP -->
-                    <ng-container matColumnDef="top">
-                      <th mat-header-cell *matHeaderCellDef mat-sort-header>TOP</th>
-                      <td mat-cell *matCellDef="let user">{{ user.top}}</td>
-                    </ng-container>
-          
-                    <!-- TCD -->
-                    <ng-container matColumnDef="tcd">
-                      <th mat-header-cell *matHeaderCellDef mat-sort-header>TCD</th>
-                      <td mat-cell *matCellDef="let user">{{ user.tcd}}</td>
-                    </ng-container>
-          
-                    <!-- DOT -->
-                    <ng-container matColumnDef="dot">
-                      <th mat-header-cell *matHeaderCellDef mat-sort-header>DOT</th>
-                      <td mat-cell *matCellDef="let user">{{ user.dot}}</td>
-                    </ng-container>
-          
-                    <!-- Batch -->
-                    <ng-container matColumnDef="batch">
-                      <th mat-header-cell *matHeaderCellDef mat-sort-header>Batch</th>
-                      <td mat-cell *matCellDef="let user">{{ user.batch}}</td>
-                    </ng-container>
-          
-          
-                    <!-- skill_Catagories -->
-                    <ng-container matColumnDef="skill_Catagories">
-                      <th mat-header-cell *matHeaderCellDef mat-sort-header>Skill_Catagories</th>
-                      <td mat-cell *matCellDef="let user">{{ user.skill_Catagories}}</td>
-                    </ng-container>
-          
-                    <!-- skill_Clusters -->
-                    <ng-container matColumnDef="skill_Clusters">
-                      <th mat-header-cell *matHeaderCellDef mat-sort-header>Skill_Clusters</th>
-                      <td mat-cell *matCellDef="let user">{{ user.skill_Clusters}}</td>
-                    </ng-container>
-          
-          
-                    <!-- actions -->
-                    <ng-container matColumnDef="actions">
-                      <th mat-header-cell *matHeaderCellDef mat-sort-header>Actions</th>
-                      <td mat-cell *matCellDef="let user" (click)="openEditForm(user)">
-                        <button mat-icon-button color="primary">
-                          <mat-icon class="material-symbols-outlined">visibility</mat-icon>
-                        </button>
-                      </td>
-                    </ng-container>
-          
-                    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-                    <!-- <tr mat-row *matRowDef="let row; columns: selectedColumns; let even = even; let odd = odd"
-                      [class.even-row]="even" [class.odd-row]="odd"></tr>
-          
-                    <tr class="mat-row" *matNoDataRow> -->
-                      <!-- <td class="mat-cell" colspan="8">No data matching the filter "{{ input.value }}"</td>
-                    </tr> -->
-                  </table>
-            </div>
+      <div class="mat-elevation-z4">
+        <div class="table-responsive">
+          <table mat-table [dataSource]="dataSource" matSort class="table table-striped table-hover">
+            <ng-container *ngFor="let column of selectedColumns">
+              <ng-container [matColumnDef]="column">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header>{{ column }}</th>
+                <td mat-cell *matCellDef="let user; let i = index">
+                    <ng-container *ngIf="column !== 'serialNumber'">{{ user[column] }}</ng-container> 
+                    <mat-checkbox *ngIf="column !== 'RoleName'" ></mat-checkbox>                 
+                </td>
+              </ng-container>
+            </ng-container>          
+            <tr mat-header-row *matHeaderRowDef="selectedColumns" ></tr>
+            <tr mat-row *matRowDef="let row; columns: selectedColumns; let even = even; let odd = odd"
+              [class.even-row]="even" [class.odd-row]="odd"></tr>
+          </table>
         </div>
-        <!-- <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]" aria-label="Select page of users"></mat-paginator> -->
+      </div>
     </mat-card-content>
 </mat-card>
