--- a/DataCorner/TD/src/app/component/employeetable/employeetable.component.html
+++ b/DataCorner/TD/src/app/component/employeetable/employeetable.component.html
@@ -56,7 +56,7 @@
     <div class="mat-elevation-z4">
       <div class="table-responsive">
         <table mat-table [dataSource]="dataSource" matSort class="table table-striped table-hover">
-          <ng-container *ngFor="let column of selectedColumns">
+          <ng-container *ngFor="let column of selectedColumns; let columnIndex = index">
             <ng-container [matColumnDef]="column">
               <th mat-header-cell *matHeaderCellDef mat-sort-header>{{ column }}</th>
               <td mat-cell *matCellDef="let user; let i = index">
@@ -68,6 +68,9 @@
                     <ng-container *ngIf="userRole !== 'admin' || !columns.includes(column)">
                       {{ user[column] }}
                     </ng-container>
+                  </ng-container>
+                  <ng-container *ngIf="column === 'submit'">
+                    <button mat-raised-button color="primary" (click)="submit(user)">Submit</button>
                   </ng-container>
                   <ng-container *ngIf="column === 'serialNumber'">{{ getSerialNumber(i) }}</ng-container>
                 </ng-container>
