Enhancement(Employee table Component):Change the table button name

--- a/DataCorner/TD/src/app/component/employeetable/employeetable.component.html
+++ b/DataCorner/TD/src/app/component/employeetable/employeetable.component.html
@@ -70,7 +70,7 @@
                     </ng-container>
                   </ng-container>
                   <ng-container *ngIf="column === 'submit'">
-                    <button mat-raised-button color="primary" (click)="submit(user)">Submit</button>
+                    <button mat-raised-button color="primary" (click)="submit(user)">Update</button>
                   </ng-container>
                   <ng-container *ngIf="column === 'serialNumber'">{{ getSerialNumber(i) }}</ng-container>
                 </ng-container>
