--- a/DataCorner/TD/src/app/component/employeetable/employeetable.component.html
+++ b/DataCorner/TD/src/app/component/employeetable/employeetable.component.html
@@ -8,11 +8,11 @@
   <h2>Trainee List</h2>
   <h2> - {{category}}</h2>
   <ng-container *ngIf="userRole === 'admin'">
-  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-  <button class="Btn1" mat-raised-button color="primary" (click)="addcolumns()">
-    <div class="text">Manage Permission</div>
-  </button>
-</ng-container>
+    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+    <button class="Btn1" mat-raised-button color="primary" (click)="addcolumns()">
+      <div class="text">Manage Permission</div>
+    </button>
+  </ng-container>
 </div>
 
 <mat-card>
@@ -26,22 +26,21 @@
         </mat-form-field>
       </div>
       <ng-container *ngIf="userRole === 'admin'">
-      <div class="col-md-3" p>
-        <mat-form-field appearance="outline" style="width: 200px;">
-          <div class="column-selector">
-            <mat-select [(ngModel)]="selectedColumns" multiple>
-              <mat-checkbox [(ngModel)]="showColumns" (change)="toggleAllColumns($event)">All</mat-checkbox>
-              <mat-option *ngFor="let column of columns" [value]="column">{{ column }}</mat-option>
-            </mat-select>
-          </div>
-        </mat-form-field>
-      </div>
-    </ng-container>
+        <div class="col-md-3" p>
+          <mat-form-field appearance="outline" style="width: 200px;">
+            <div class="column-selector">
+              <mat-select [(ngModel)]="selectedColumns" multiple>
+                <mat-checkbox [(ngModel)]="showColumns" (change)="toggleAllColumns($event)">All</mat-checkbox>
+                <mat-option *ngFor="let column of columns" [value]="column">{{ column }}</mat-option>
+              </mat-select>
+            </div>
+          </mat-form-field>
+        </div>
+      </ng-container>
 
       <div class="col-md-4"></div>
       <div class="col-md-2" style="padding-left: 2%;">
         <ng-container *ngIf="userRole === 'admin'">
-          
           <button class="Btn" mat-raised-button color="primary" (click)="addForm()">
             <div class="text">Add</div>
           </button>
@@ -52,7 +51,7 @@
           </button>
         </ng-container>
       </div>
-    </div>    
+    </div>
     <div class="mat-elevation-z4">
       <div class="table-responsive">
         <table mat-table [dataSource]="dataSource" matSort class="table table-striped table-hover">
@@ -72,6 +71,10 @@
                   <ng-container *ngIf="column === 'submit'">
                     <button mat-raised-button color="primary" (click)="submit(user)">Update</button>
                   </ng-container>
+                  <ng-container *ngIf="column === 'select'">
+                    <!-- Add a checkbox for each row -->
+                    <mat-checkbox (change)="toggleRowSelection(user)" [checked]="isSelected(user)"></mat-checkbox>
+                  </ng-container>
                   <ng-container *ngIf="column === 'serialNumber'">{{ getSerialNumber(i) }}</ng-container>
                 </ng-container>
                 <ng-template #actionsColumn>
@@ -84,14 +87,17 @@
           </ng-container>
           <tr mat-header-row *matHeaderRowDef="selectedColumns"></tr>
           <tr mat-row *matRowDef="let row; columns: selectedColumns; let even = even; let odd = odd"
-            [class.even-row]="even" [class.odd-row]="odd"></tr>
+            [class.even-row]="even" [class.odd-row]="odd" [class.selected-row]="isSelected(row)"></tr>
           <tr class="mat-row" *matNoDataRow>
             <td class="mat-cell" [attr.colspan]="selectedColumns.length">No data matching the filter "{{ input.value }}"</td>
           </tr>
         </table>
       </div>
     </div>
-    
+
     <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]" aria-label="Select page of users"></mat-paginator>
+    <div class="update-button-container">
+      <button mat-raised-button color="primary" (click)="submitSelectedRows()">Update</button>
+    </div>
   </mat-card-content>
 </mat-card>
