Feature (Assest-Management): Assets button added the front end .

--- a/DataCorner/TD/src/app/component/dashboard/dashboard.component.html
+++ b/DataCorner/TD/src/app/component/dashboard/dashboard.component.html
@@ -1,9 +1,13 @@
 <app-header></app-header>
 
 
-<div class="row">
-  <h2>DASHBOARD</h2>
+<div class="row" >
+  <div class="column"><h2>DASHBOARD</h2></div>
+  <div class="column" style="margin-left: 65%;">
+    <button mat-raised-button color="primary">Assests</button>
+  </div>
 </div>
+
 
 <div class="">
   <div class="row p-3">
