--- a/DataCorner/TD/src/app/component/dashboard/dashboard.component.scss
+++ b/DataCorner/TD/src/app/component/dashboard/dashboard.component.scss
@@ -12,5 +12,11 @@ mat-card:hover {
 .row{
     padding-left: 2%;
     padding-top: 1%;
+    display: flex;
 
 }
+.column {
+  flex: 1;
+  margin: 5px;
+}
+  
