--- a/DataCorner/TD/src/app/component/dashboard/dashboard.component.html
+++ b/DataCorner/TD/src/app/component/dashboard/dashboard.component.html
@@ -3,8 +3,10 @@
 
 <div class="row" >
   <div class="column"><h2>DASHBOARD</h2></div>
-  <div class="column" style="margin-left: 65%;">
-    <button mat-raised-button color="primary">Assests</button>
+  <div class="column" style="margin-left: 70%;">
+    <ng-container *ngIf="userRole === 'admin'">
+      <button mat-raised-button color="primary" (click)="assestdt()">Assests</button>
+    </ng-container>
   </div>
 </div>
 
