--- a/DataCorner/TD/src/app/component/employeetable/employeetable.component.html
+++ b/DataCorner/TD/src/app/component/employeetable/employeetable.component.html
@@ -39,18 +39,22 @@
       </ng-container>
 
       <div class="col-md-4"></div>
-      <div class="col-md-2" style="padding-left: 2%;">
+      <div class="col-md-2" style="display: flex; align-items: center;">
         <ng-container *ngIf="userRole === 'admin'">
           <button class="Btn" mat-raised-button color="primary" (click)="addForm()">
             <div class="text">Add</div>
           </button>
-
-          <button class="ExprtBtn" mat-raised-button color="primary" style="margin-left: 5px;"
-            (click)="downloadExcel()">
+      
+          <button class="ExprtBtn" mat-raised-button color="primary" style="margin-left: 5px;" (click)="downloadExcel()">
             <div class="text">Export</div><mat-icon>download</mat-icon>
+          </button>
+          
+          <button class="UpdateBtn" mat-raised-button color="primary" style="margin-left: 5px;" (click)="submitSelectedRows()">
+            <div class="text">Update</div>
           </button>
         </ng-container>
       </div>
+      
     </div>
     <div class="mat-elevation-z4">
       <div class="table-responsive">
@@ -94,12 +98,11 @@
         </table>
       </div>
     </div>
-
     <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]" aria-label="Select page of users"></mat-paginator>
-    <ng-container *ngIf="userRole === 'admin'">
+    <!-- <ng-container *ngIf="userRole === 'admin'">
     <div class="update-button-container">
       <button mat-raised-button color="primary" (click)="submitSelectedRows()">Update</button>
     </div>
-  </ng-container>
+  </ng-container> -->
   </mat-card-content>
 </mat-card>
