--- a/DataCorner/TD/src/app/component/assettable/assettable.component.html
+++ b/DataCorner/TD/src/app/component/assettable/assettable.component.html
@@ -27,7 +27,7 @@
             <div class="col-md-4"></div>
             <div class="col-md-2" style="display: flex; align-items: center;">
                 <ng-container>
-                    <button class="Btn" mat-raised-button color="primary">
+                    <button class="Btn" mat-raised-button color="primary" (click)="assestAdd()">
                         <div class="text">Add</div>
                     </button>
 
@@ -42,7 +42,7 @@
                 </ng-container>
             </div>
         </div>
-        
+
         <div class="mat-elevation-z4">
             <div class="table-responsive">
                 <table mat-table [dataSource]="dataSource" matSort class="table table-striped table-hover">
@@ -56,8 +56,7 @@
                                     </ng-container>
                                 </ng-container>
                                 <ng-template #actionsColumn>
-                                    <button mat-icon-button color="primary" aria-label="Edit"
-                                        (click)="openEditForm(user)">
+                                    <button mat-icon-button color="primary" aria-label="Edit" (click)="openEditForm(user)">
                                         <mat-icon class="material-symbols-outlined">visibility</mat-icon>
                                     </button>
                                 </ng-template>
