--- a/DataCorner/TD/src/app/component/assettable/assettable.component.html
+++ b/DataCorner/TD/src/app/component/assettable/assettable.component.html
@@ -1,79 +1,133 @@
 <app-header></app-header>
 
 <div class="example-button-container">
-    <button mat-fab color="primary" aria-label="Example icon button with a home icon" class="backButton"
-        (click)="goBack()">
-        <span class="material-icons">arrow_back</span>
-    </button>
-    <h2>Asset List</h2>
-
+  <button
+    mat-fab
+    color="primary"
+    aria-label="Example icon button with a home icon"
+    class="backButton"
+    (click)="goBack()"
+  >
+    <span class="material-icons">arrow_back</span>
+  </button>
+  <h2>Asset List</h2>
 </div>
-
 <mat-card>
-    <mat-card-content>
-        <div class="row">
-            <div class="col-md-3">
-                <mat-form-field appearance="outline">
-                    <mat-label>Search</mat-label>
-                    <input matInput placeholder (keyup)="applyFilter($event)" #input />
-                    <mat-icon matSuffix>search</mat-icon>
-                </mat-form-field>
-            </div>
-            <ng-container>
-                <div class="col-md-3" p>
-                </div>
-            </ng-container>
+  <mat-card-content>
+    <div class="row">
+      <div class="col-md-3">
+        <mat-form-field appearance="outline">
+          <mat-label>Search</mat-label>
+          <input matInput placeholder (keyup)="applyFilter($event)" #input />
+          <mat-icon matSuffix>search</mat-icon>
+        </mat-form-field>
+      </div>
+      <ng-container>
+        <div class="col-md-3" p></div>
+      </ng-container>
+      <div class="col-md-4"></div>
+      <div class="col-md-2" style="display: flex; align-items: center">
+        <ng-container>
+          <button
+            class="Btn"
+            mat-raised-button
+            color="primary"
+            (click)="assestAdd()"
+          >
+            <div class="text">Add</div>
+          </button>
 
-            <div class="col-md-4"></div>
-            <div class="col-md-2" style="display: flex; align-items: center;">
-                <ng-container>
-                    <button class="Btn" mat-raised-button color="primary" (click)="assestAdd()">
-                        <div class="text">Add</div>
-                    </button>
+          <button
+            class="ExprtBtn"
+            mat-raised-button
+            color="primary"
+            style="margin-left: 5px"
+            (click)="downloadExcel()"
+          >
+            <div class="text">Export</div>
+            <mat-icon>download</mat-icon>
+          </button>
 
-                    <button class="ExprtBtn" mat-raised-button color="primary" style="margin-left: 5px;"
-                        (click)="downloadExcel()">
-                        <div class="text">Export</div><mat-icon>download</mat-icon>
-                    </button>
-
-                    <!-- <button class="UpdateBtn" mat-raised-button color="primary" style="margin-left: 5px;">
+          <!-- <button class="UpdateBtn" mat-raised-button color="primary" style="margin-left: 5px;">
                         <div class="text">Update</div>
                     </button> -->
-                </ng-container>
-            </div>
-        </div>
+        </ng-container>
+      </div>
+    </div>
 
-        <div class="mat-elevation-z4">
-            <div class="table-responsive">
-                <table mat-table [dataSource]="dataSource" matSort class="table table-striped table-hover">
-                    <ng-container *ngFor="let column of selectedColumns; let columnIndex = index">
-                        <ng-container [matColumnDef]="column">
-                            <th mat-header-cell *matHeaderCellDef mat-sort-header>{{ column }}</th>
-                            <td mat-cell *matCellDef="let user; let i = index">
-                                <ng-container *ngIf="column !== 'actions'; else actionsColumn">
-                                    <ng-container>
-                                        {{ user[column] }}
-                                    </ng-container>
-                                </ng-container>
-                                <ng-template #actionsColumn>
-                                    <button mat-icon-button color="primary" aria-label="Edit" (click)="openEditForm(user)">
-                                        <mat-icon class="material-symbols-outlined">visibility</mat-icon>
-                                    </button>
-                                </ng-template>
-                            </td>
-                        </ng-container>
-                    </ng-container>
-                    <tr mat-header-row *matHeaderRowDef="selectedColumns"></tr>
-                    <tr class="mat-row" *matNoDataRow>
-                        <td class="mat-cell" [attr.colspan]="selectedColumns.length">No data matching the filter "{{
-                            input.value }}"</td>
-                    </tr>
-                </table>
-            </div>
-        </div>
+    <div class="mat-elevation-z4">
+      <div class="table-responsive">
+        <!-- asset.component.html -->
 
+<table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+  <!-- Serial Number Column -->
+  <ng-container matColumnDef="serialNumber">
+    <th mat-header-cell *matHeaderCellDef> SerialNo </th>
+    <td mat-cell *matCellDef="let index = index">{{ index + 1 }}</td>
+  </ng-container>
 
+  <!-- Asset Id Column -->
+  <ng-container matColumnDef="assetId">
+    <th mat-header-cell *matHeaderCellDef>Asset ID</th>
+    <td mat-cell *matCellDef="let asset">{{ asset.assetId }}</td>
+  </ng-container>
 
-        <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]" aria-label="Select page of users"></mat-paginator>
-    </mat-card-content>
+  <!-- Employee Id Column -->
+  <ng-container matColumnDef="empId">
+    <th mat-header-cell *matHeaderCellDef>Employee ID</th>
+    <td mat-cell *matCellDef="let asset">{{ asset.empId }}</td>
+  </ng-container>
+
+  <!-- Employee Name Column -->
+  <ng-container matColumnDef="empName">
+    <th mat-header-cell *matHeaderCellDef>Employee Name</th>
+    <td mat-cell *matCellDef="let asset">{{ asset.empName }}</td>
+  </ng-container>
+
+  <!-- Location Column -->
+  <ng-container matColumnDef="location">
+    <th mat-header-cell *matHeaderCellDef>Location</th>
+    <td mat-cell *matCellDef="let asset">{{ asset.location }}</td>
+  </ng-container>
+
+  <!-- Make Column -->
+  <ng-container matColumnDef="make">
+    <th mat-header-cell *matHeaderCellDef>Make</th>
+    <td mat-cell *matCellDef="let asset">{{ asset.make }}</td>
+  </ng-container>
+
+  <!-- Model Number Column -->
+  <ng-container matColumnDef="modelNo">
+    <th mat-header-cell *matHeaderCellDef>Model Number</th>
+    <td mat-cell *matCellDef="let asset">{{ asset.modelNo }}</td>
+  </ng-container>
+
+  <!-- Issues Column -->
+  <ng-container matColumnDef="issues">
+    <th mat-header-cell *matHeaderCellDef>Issues</th>
+    <td mat-cell *matCellDef="let asset">{{ asset.issues }}</td>
+  </ng-container>
+
+  <!-- Action Column -->
+  <ng-container matColumnDef="action">
+    <th mat-header-cell *matHeaderCellDef>Action</th>
+    <td mat-cell *matCellDef="let row">
+      <button mat-icon-button color="primary" (click)="performAction(row)">
+        <mat-icon class="material-symbols-outlined">visibility</mat-icon>
+      </button>
+    </td>
+  </ng-container>
+
+  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+  <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+</table>
+
+      </div>
+    </div>
+
+    <mat-paginator
+      [pageSizeOptions]="[5, 10, 25, 100]"
+      aria-label="Select page of users"
+    ></mat-paginator>
+  </mat-card-content>
 </mat-card>
