Enhancement(Asset Management Form ):View the employee name in Top of the form

--- a/DataCorner/TD/src/app/component/asset-management from/asset-management.component.html
+++ b/DataCorner/TD/src/app/component/asset-management from/asset-management.component.html
@@ -4,7 +4,7 @@
       <span class="material-icons">arrow_back</span>
     </button>
     <h2>Asset Form -</h2>
-    <h2> - {{ myForm.get('name')?.value }}</h2>
+    <h2>  {{ myForm.get('EmpName')?.value }}</h2>
   </div>
 <form [formGroup]="myForm" (ngSubmit)="onSubmit()">
     <div class="content">  
