--- a/DataCorner/TD/src/app/component/employeetable/employeetable.component.html
+++ b/DataCorner/TD/src/app/component/employeetable/employeetable.component.html
@@ -25,7 +25,7 @@
           <mat-icon matSuffix>search</mat-icon>
         </mat-form-field>
       </div>
-      <ng-container *ngIf="userRole === 'admin'">
+      <ng-container >
         <div class="col-md-3" p>
           <mat-form-field appearance="outline" style="width: 200px;">
             <div class="column-selector">
