--- a/DataCorner/TD/src/app/component/employeetable/employeetable.component.html
+++ b/DataCorner/TD/src/app/component/employeetable/employeetable.component.html
@@ -25,8 +25,8 @@
           <mat-icon matSuffix>search</mat-icon>
         </mat-form-field>
       </div>
-      <ng-container *ngIf="userRole === 'admin'">
-        <div class="col-md-3" p>
+      <!-- <ng-container *ngIf="userRole === 'admin'"> -->
+        <div class="col-md-3" >
           <mat-form-field appearance="outline" style="width: 200px;">
             <div class="column-selector">
               <mat-select [(ngModel)]="selectedColumns" multiple>
@@ -36,7 +36,9 @@
             </div>
           </mat-form-field>
         </div>
-      </ng-container>
+
+
+      <!-- </ng-container> -->
 
       <div class="col-md-4"></div>
       <div class="col-md-2" style="display: flex; align-items: center;">
