--- a/DataCorner/TD/src/app/component/dashboard/dashboard.component.html
+++ b/DataCorner/TD/src/app/component/dashboard/dashboard.component.html
@@ -1,11 +1,11 @@
 <app-header></app-header>
 
-
-<div class="row" >
+<div class="dashboard-container">
+  <div class="row" >
   <div class="column"><h2>DASHBOARD</h2></div>
   <div class="column" style="margin-left: 70%;">
     <ng-container *ngIf="userRole === 'admin'">
-      <button mat-raised-button color="primary" (click)="assestdt()">Assests</button>
+      <button mat-raised-button style="margin-left: 70px;" color="primary" (click)="assestdt()">Assests</button>
     </ng-container>
   </div>
 </div>
@@ -14,10 +14,10 @@
 <div class="">
   <div class="row p-3">
 
-    <div class="col-md-2">
+    <div  class="col-md-2">
       <div class="card">
-        <div class="card-body">
-          <mat-card *ngIf="cardData" (click)="onCardClicked('BL')">
+        <div  class="card-body">
+          <mat-card  *ngIf="cardData" (click)="onCardClicked('BL')">
             <mat-card-title>BL</mat-card-title>
             <mat-card-content>
               <b>{{ cardData.billable }}</b>
@@ -128,6 +128,52 @@
         </div>
       </div>
     </div>
+    <div class="row">
+<div class="col-md-4">
+  <mat-card>
+<canvas baseChart style="height: 300px;"
+[datasets]="chartData.datasets"
+[labels]="chartData.labels"
+[options]="{ responsive: true }"
+[legend]="true"
+[type]="'bar'">
+</canvas>
+</mat-card>
+</div>
+<div class="col-md-4">
+  <!-- <mat-card style="height: 300px;">
+  <canvas baseChart style="height: 300px;"
+        [labels]="chartData.labels"
+        [datasets]="chartData.datasets"
+        [options]="{ responsive: true }"
+        [legend]="true"
+        [type]="'line'">
+</canvas>
+</mat-card> -->
+</div>
 
+<div class="col-md-4">
+  <!-- <mat-card style="height: 300px;">
+  <canvas baseChart width="400" height="100"
+  [type]="'pie'"
+  [datasets]="chartData.datasets"
+  [labels]="chartData.labels"
+  [options]="{ responsive: true }"
+  [legend]="true">
+</canvas>
+</mat-card> -->
   </div>
+  <!-- <div class="col-md-4">
+    <mat-card style="height: 300px;">
+    <canvas baseChart
+        [datasets]="chartData.datasets"
+        [options]="{ responsive: true }"
+        [labels]="chartData.labels"
+        [type]="'radar'">
+</canvas>
+</mat-card>
+    </div> -->
+    </div>
+  </div>
+</div>
 </div>
