Upload excel data

--- a/DataCorner/TD/src/app/component/dashboard/dashboard.component.html
+++ b/DataCorner/TD/src/app/component/dashboard/dashboard.component.html
@@ -132,7 +132,7 @@
 </mat-card>
 </div>
 <div class="col-md-4">
-  <!-- <mat-card style="height: 300px;">
+  <mat-card style="height: 300px;">
   <canvas baseChart style="height: 300px;"
         [labels]="chartData.labels"
         [datasets]="chartData.datasets"
@@ -140,11 +140,11 @@
         [legend]="true"
         [type]="'line'">
 </canvas>
-</mat-card> -->
+</mat-card>
 </div>
 
 <div class="col-md-4">
-  <!-- <mat-card style="height: 300px;">
+  <mat-card style="height: 300px;">
   <canvas baseChart 
   [type]="'pie'"
   [datasets]="chartData.datasets"
@@ -152,7 +152,7 @@
   [options]="{ responsive: true }"
   [legend]="true">
 </canvas>
-</mat-card> -->
+</mat-card>
   </div>
   <!-- <div class="col-md-4">
     <mat-card style="height: 300px;">
