New Feature(Employee Table Component):Import Excel files to Backend

--- a/DataCorner/TD/src/app/component/employeetable/employeetable.component.html
+++ b/DataCorner/TD/src/app/component/employeetable/employeetable.component.html
@@ -5,7 +5,7 @@
     (click)="goBack()">
     <span class="material-icons">arrow_back</span>
   </button>
-  <h2>Trainee List</h2>
+  <h2>Trainee List</h2> 
   <h2> - {{category}}</h2>
   <ng-container *ngIf="userRole === 'admin'">
     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
@@ -56,7 +56,7 @@
           <button class="UpdateBtn" mat-raised-button color="primary" style="margin-left: 5px;" (click)="submitSelectedRows()">
             <div class="text">Update</div>
           </button>
-        </ng-container>
+        </ng-container> 
       </div>
       
     </div>
@@ -108,5 +108,18 @@
       <button mat-raised-button color="primary" (click)="submitSelectedRows()">Update</button>
     </div>
   </ng-container> -->
+  <ng-container *ngIf="userRole === 'admin'">
+  <!-- <input type="file" (change)="handleFileInput($event)" accept=".xlsx, .xls" style="display: none" #fileInput />
+  <button class="ImportBtn" mat-raised-button color="primary" style="margin-left: 5px;" (click)="fileInput.click()">
+    <div class="text">Import</div><mat-icon>upload</mat-icon>
+  </button> -->
+  <!-- Add this button to trigger file input -->
+<button class="UploadBtn" mat-raised-button color="primary" style="margin-left: 5px;" (click)="fileInputUpload.click()">
+  <div class="text">Import Excel File</div><mat-icon>cloud_upload</mat-icon>
+</button>
+
+<!-- Hidden file input -->
+<input type="file" (change)="uploadToAPI($event)" style="display: none" #fileInputUpload />
+</ng-container>
   </mat-card-content>
 </mat-card>
